Fix lobby not showing new connections to clients not in the lobby

--- a/src/components/PlayerCard/PlayerCard.module.scss
+++ b/src/components/PlayerCard/PlayerCard.module.scss
@@ -43,9 +43,6 @@
     cursor: pointer;
     background: $translucentWhite;
 
-    p {
-    }
-
     div {
       width: 10px;
     }
